# lab07-2-

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md  REPORT.md
.github/workflow/: ci.yml
banking/: CMakeLists.txt  Transaction.cpp
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
cmake/projects/georgij5920_print/: hunter.cmake
demo/: CMakeLists.txt  main.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp
hello_world_application/: CMakeLists.txt  main.cpp
print_lib/: CMakeLists.txt  print.hpp
solver_application/: CMakeLists.txt  main.cpp
solver_lib/: CMakeLists.txt  solver.cpp
tests/: test_account.cpp  test_transaction.cpp
